2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Added --with-config-file=xxx (code partially taken
	from gnustep-base) option.
	* config.make.ac: Added GNUSTEP_CONFIG_FILE variable holding the
	configured location of the config file for this installation.
	* configure: Regenerated.
	
2005-10-06 Tom MacSween <macsweent@sympatico.ca>

	* Fixes for cygwin.
	* Instance/rules.make: Add Windows resource files for cygwin
	* config.make.in: Cygwin does not have ln-s
	* rules.make: Add Windows resource rules for cygwin
	* target.make (cygwin): Fix shared link cmd.

2005-10-06  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (ALL_OBJCCFLAGS, $(GNUSTEP_OBJ_DIR)/%${OEXT}): When
	compiling ObjC++ files, don't use the additional ObjC flags but
	only the internal/system ones, to make it easier/possible for end
	users to add different flags to ObjC and ObjC++ compilations.
	
2005-10-06  Nicola Pero  <n.pero@mi.flashnet.it>

	Added support for ObjC++.  You should list the ObjC++ .mm files in
	the xxx_OBJCC_FILES variable, and put extra ObjC++ flags in
	xxx_OBJCCFLAGS or ADDITIONAL_OBJCCFLAGS.
	* rules.make (.SUFFIXES): Added .mm for ObjC++.
	($(GNUSTEP_OBJ_DIR)/%${OEXT}): Added rule to compile .mm files
	into .o files.
	(ALL_OBJCCFLAGS): New variable, set from ADDITIONAL_OBJCCFLAGS and
	AUXILIARY_OBJCCFLAGS.
	* Instance/rules.make (OBJCC_OBJS, OBJCC_OBJ_FILES): New variables
	set from xxx_OBJCC_FILES.
	(OBJ_FILES_TO_LINK): Added the new OBJCC_OBJ_FILES to the list of things
	to link.
	(ADDITIONAL_OBJCCFLAGS): New variable set from xxx_ADDITIONAL_OBJCCFLAGS.
	
2005-09-28  Adam Fedor  <fedor@gnu.org>

	* target.make (cygwin/SHARED_LIB_LINK_CMD): Correct lib file name
	(Fix from Tom MacSween).
	* Instance/framework.make: Add extension to NSExecutable.

2005-09-22  Adam Fedor  <fedor@gnu.org>

	* Add runtime flags everywhere for Mac OS/gcc dual runtimes
	* rules.make (CC_LDFLAGS): New variable for extra ld flags
	* target.make (darwin/SHARED_LD_PREFLAGS): Use it.