@@ -1,29 +1,0 @@
-#
-# Example GNUstep.conf file. Please customize for your use
-# and place in the appropriate configuration directory (which depends
-# on the operating system or the --config-file argument passed to gnustep-base
-# configure.)
-#
-GNUSTEP_SYSTEM_ROOT = /usr/GNUstep/System
-GNUSTEP_LOCAL_ROOT = /usr/GNUstep/Local
-GNUSTEP_NETWORK_ROOT = /usr/GNUstep/Local
-
-USER_GNUSTEP_DIR = GNUstep
-USER_GNUSTEP_DEFAULTS = Defaults
-USER_GNUSTEP_RC = .GNUsteprc
-
-SYS_APPS = /bin
-SYS_LIBS = /lib
-SYS_PREFS = /etc
-SYS_ADMIN = /sbin
-
-PLATFORM_APPS = /usr/bin
-PLATFORM_LIBS = /usr/lib
-PLATFORM_ADMIN = /usr/sbin
-PLATFORM_RESOURCES = /usr/share
-
-PLATFORM_LOCAL_APPS = /usr/local/bin
-PLATFORM_LOCAL_LIBS = /usr/local/libs
-PLATFORM_LOCAL_ADMIN = /usr/local/sbin
-PLATFORM_LOCAL_RESOURCES = /usr/local/share
-
